@@ -4,9 +4,8 @@ import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import ru.home.projects.nasaphototelegrambot.service.SendBotMessageService;
+import ru.home.projects.nasaphototelegrambot.utils.AnswerMessage;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class MarsCommand implements Command {
@@ -17,17 +16,16 @@ public class MarsCommand implements Command {
         this.messageService = messageService;
     }
 
-    public final static String MARS_MESSAGE = "Выберите марсоход, с которого хотите получить фото.\n" +
-            "Загрузка может занять <b>3-5 секунд</b>, т.к. в чат загружается сразу галерея из 10 фотографий.";
-
     @Override
     public void execute(Update update) {
+        InlineKeyboardMarkup inlineKeyboardMarkup = getInlineKeyboardMarkup();
+        messageService.sendMessage(update.getMessage().getChatId().toString(), AnswerMessage.MARS_COMMAND, inlineKeyboardMarkup);
+    }
 
+    private InlineKeyboardMarkup getInlineKeyboardMarkup() {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(
-                Arrays.asList(
-                        InlineKeyboardButton.builder()
+        List<List<InlineKeyboardButton>> keyboard = List.of(
+                List.of(InlineKeyboardButton.builder()
                                 .text("Curiosity")
                                 .callbackData("curiosity")
                                 .build(),
@@ -38,10 +36,8 @@ public class MarsCommand implements Command {
                         InlineKeyboardButton.builder()
                                 .text("Spirit")
                                 .callbackData("spirit")
-                                .build())
-        );
+                                .build()));
         inlineKeyboardMarkup.setKeyboard(keyboard);
-        messageService.sendMessage(update.getMessage().getChatId().toString(), MARS_MESSAGE, inlineKeyboardMarkup);
-
+        return inlineKeyboardMarkup;
     }
 }
