@@ -4,9 +4,8 @@ import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import ru.home.projects.nasaphototelegrambot.service.SendBotMessageService;
+import ru.home.projects.nasaphototelegrambot.utils.AnswerMessage;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class SubscribeCommand implements Command {
@@ -17,17 +16,16 @@ public class SubscribeCommand implements Command {
         this.messageService = messageService;
     }
 
-    public final static String SUBSCRIBE_MESSAGE = "Нажав кнопку <b>\"Подписаться\"</b> вам будет каждый день в 14:00 по мск приходить фото дня.\n" +
-                    "Кнопка \"Отменить подписку\" отменяет данную подписку";
-
     @Override
     public void execute(Update update) {
+        InlineKeyboardMarkup inlineKeyboardMarkup = getInlineKeyboardMarkup();
+        messageService.sendMessage(update.getMessage().getChatId().toString(), AnswerMessage.SUBSCRIBE_COMMAND, inlineKeyboardMarkup);
+    }
 
+    private InlineKeyboardMarkup getInlineKeyboardMarkup() {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(
-                Arrays.asList(
-                        InlineKeyboardButton.builder()
+        List<List<InlineKeyboardButton>> keyboard = List.of(
+                List.of(InlineKeyboardButton.builder()
                                 .text("Подписаться")
                                 .callbackData("subscribe")
                                 .build(),
@@ -37,7 +35,6 @@ public class SubscribeCommand implements Command {
                                 .build())
         );
         inlineKeyboardMarkup.setKeyboard(keyboard);
-
-        messageService.sendMessage(update.getMessage().getChatId().toString(), SUBSCRIBE_MESSAGE, inlineKeyboardMarkup);
+        return inlineKeyboardMarkup;
     }
 }
